Fix hero block image bottom space on mobile

--- a/theme/extras/document.less
+++ b/theme/extras/document.less
@@ -405,4 +405,8 @@
 
 #page-document .block.hero .hero-body {
   padding-top: 0px;
+  @media only screen and (max-width: @largestMobileScreen) {
+    padding-top: 1rem;
+    padding: 1rem;
+  }
 }
